# georelations

./: .env  .envrc  .gitignore  Dockerfile  LICENCE  Makefile  README.md  pyproject.toml  req_old.txt  requirements.txt
.github/workflows/: black.yml  cml.yml  lint.yml  pytest.yml  run.yml  tests.yml
conf/: ens.yaml  ger.yaml  rel.yaml
conf/data/: ens.yaml  ger.yaml  rel.yaml
conf/hydra/: default.yaml
conf/logging/: default.yaml
conf/model/: ens.yaml  ger.yaml  rel.yaml
conf/optim/: default.yaml
conf/train/: ger.yaml  rel.yaml
data/: relations.csv  relations.txt  train_ger.conll  wiki_corefs.txt
docs/: inf.html  run.html
docs/common/: dbpedia_query.html  index.html  model_utils.html  utils.html
docs/pl_data/: conll03_dataset.html  conll_dataset.html  csv_dataset.html  datamodule.html  index.html  text_dataset.html
docs/pl_metric/: index.html  metric.html
docs/pl_modules/: ensemble.html  ger_model.html  index.html  rbert_model.html
docs/src/: index.html  inf.html  run.html  train.html
docs/src/common/: index.html  model_utils.html  utils.html
docs/src/pl_data/: conll_dataset.html  csv_dataset.html  datamodule.html  index.html  jsonl_dataset.html  rel_dataset.html  text_dataset.html  wnut_dataset.html
docs/src/pl_metric/: index.html  metric.html  seqeval_f1.html
docs/src/pl_module/: ensemble.html  ger_model.html  index.html  rbert_model.html
docs/src/pl_modules/: ensemble.html  ger_model.html  index.html  model_nn.html  rbert_model.html
docs/src/processing/: index.html  process_nyth.html  reddit_api.html
docs/src/ui/: index.html
docs/ui/: run.html  ui_utils.html
labelling/: doccano.db  process.py
labelling/ldata/: project_1_dataset.jsonl  wiki_corefs.txt
outputs/: create_graph.py  inf.py  run.py
paper/: gr_outline.Rmd
src/: import.cypher  inf.py  run.py  train.py
src/allen_coref/: coref.py
src/common/: dbpedia_query.py  model_utils.py  test_query.py  utils.py
src/datasets/: jsonl_dataset.py  rel_dataset.py  wnut_dataset.py
src/modules/: ensemble.py  ger_model.py  rbert_model.py
src/pl_data/: conll03_dataset.py  conll_dataset.py  csv_dataset.py  datamodule.py  dataset.py  jsonl_dataset.py  rel_dataset.py  test.py  text_dataset.py  wnut_dataset.py
src/pl_metric/: metric.py  seqeval_f1.py
src/pl_module/: ensemble.py  ger_model.py  rbert_model.py
src/pl_modules/: ensemble.py  ger_model.py  model.py  rbert_model.py
src/processing/: combine_metrics.py  dbpedia_rdf.py  freebase.py  gnames.py  parse_comments.py  process_nyth.py  reddit_api.py  reddit_dump.py
src/ui/: run.py
tests/: test_datasets.py
tests/toy_data/: train_ger.conll  train_rel.csv
typings/hydra/: __init__.pyi  errors.pyi  main.pyi  types.pyi  utils.pyi
typings/hydra/_internal/: config_loader_impl.pyi  config_repository.pyi  config_search_path_impl.pyi  (+4 more)
(+27 files in other folders)
