[tool.poetry]
name = "georelations"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.10.2"
pandas = "^1.3.3"
torch = "^1.9.0"
pytorch-lightning = "^1.4.6"
jsonlines = "^2.0.0"
sourcery-cli = "^0.9.4"
torchmetrics = "^0.5.1"
praw = "^7.4.0"
psaw = "^0.1.0"
data-science-types = "^0.2.23"
deepspeed = "^0.5.3"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
black = "^21.9b0"
data-science-types = "^0.2.23"
ipython = "^7.27.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pyright]
reportMissingTypeStubs = false
