[tool.poetry]
name = "georelations"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
torch = "^1.10.0"
torchmetrics = "^0.5.1"
pytorch-lightning = "^1.4.9"
transformers = "^4.11.3"
spacy = "^3.1.3"
pandas = "^1.3.4"
jsonlines = "^2.0.0"
psaw = "^0.1.0"
seqeval = "^1.2.2"
datasets = "^1.14.0"
ekphrasis = "^0.5.1"
isort = "^5.9.3"
flake8 = "^4.0.1"
black = "^21.9-beta.0"
data-science-types = "^0.2.23"
ipython = "^7.28.0"
ipdb = "^0.13.9"
pdoc3 = "^0.10.0"
mypy = "^0.910"
jedi-language-server = "^0.34.6"
sourcery-cli = "^0.9.5"
deepspeed = "^0.5.4"
emoji = "^1.6.1"
networkx = "^2.6.3"
PyQt5 = "^5.15.5"
pytest = "^6.2.5"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.pyright]
reportMissingTypeStubs = false
