[tool.poetry]
name = "georelations"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
setuptools = "^58.4.0"
wheel = "^0.37.0"
torch = "^1.10.0"
torchmetrics = "^0.6.0"
pytorch-lightning = "^1.5.0"
transformers = "^4.12.2"
spacy = "^3.1.4"
pandas = "^1.3.4"
jsonlines = "^2.0.0"
psaw = "^0.1.0"
seqeval = "^1.2.2"
datasets = "^1.15.1"
ekphrasis = "^0.5.1"
isort = "^5.10.0"
flake8 = "^4.0.1"
black = "^21.10-beta.0"
data-science-types = "^0.2.23"
ipython = "^7.29.0"
ipdb = "^0.13.9"
pdoc3 = "^0.10.0"
mypy = "^0.910"
jedi-language-server = "^0.34.8"
sourcery-cli = "^0.9.5"
deepspeed = "^0.5.5"
emoji = "^1.6.1"
networkx = "^2.6.3"
PyQt5 = "^5.15.6"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
